# janus-ode

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: JanusConfig.cmake
examples/cpp/: CMakeLists.txt  for_sens_u2d_act_example.cpp  for_sens_vdp_act_fn.cpp  for_sens_vdp_example.cpp  linear_multishoot_petsc.cpp  multi_shooting_petsc.cpp  petsc_composite_example.cpp  petsc_ngmres.cpp  petsc_vdp_jv_example.cpp  petsc_vdp_jv_example.hpp  pseudo_transient_vpd.cpp  radaut_example.cpp  radaute_example.cpp  radaute_example_reverse.cpp  radaute_hamiltonian_example.cpp  radauted_example.cpp  radauted_example_reverse.cpp  radauted_hamiltonian_example.cpp  radauted_vdp_aug_example.cpp  radauted_vdp_norm_example.cpp  safe_gradients_example.cpp  setup.py  twoDBVP.cpp  u2d_pmp_solver.hpp  u2d_sens.hpp  vdpBVP.cpp  vdpBVP_transient copy.cpp  vdpBVP_transient.cpp  vdp_bak.cpp  vdp_bdf_gmres.cpp  vdp_beuler.cpp  vdp_cvodes_solver.hpp  vdp_interpolate.cpp  vdp_petsc_cvodes_precond_example.cpp  vdp_shell.cpp  vdp_shell_jac.cpp  vdp_trans_pmp_solver.hpp  vdpforpmp_transient.cpp
examples/python/: aug_vdp_ref_test.py  bdf2.py  bdf2_test.py  bdf_torch.py  bdf_torch_fast.py  bdf_vdp_test.py  dubins_pmp_homotopy.py  dubins_pmp_transient_multishoot.py  mpi_petsc_test.py  pstc_example.py  radau_test.py  rb4_test.py  rosenbrock_torch_gmres.py  sssc_dnn_vdp_model.py  sssc_ml_vdp.py  stepper_ross.py  vdp_ampl_cubic_demo.py  vdp_ampl_cubic_demo_bypass.py  vdp_demo_bypass_order_two.py  vdp_demo_bypass_order_two_stiff.py  vdp_driver.py  vdp_forced_sssc.py  vdp_mu_dual.py  vdp_petsc.py  vdp_pmp_homotopy.py  vdp_pmp_transient.py  vdp_pmp_transient_multishoot.py  vdp_pseudo_transient.py  vdp_serb.py  vdp_sssc.py  vdp_sssc_data.py  vdp_sssc_minT.py
src/cpp/: backup.hpp  dopri853ted.hpp  janus_ode_common.hpp  radau5ted.hpp  radaut.hpp  radaut_example.cpp  radaute.cpp  radaute.hpp  radaute_example.cpp  radaute_impl.hpp  radauted.cpp  radauted.hpp  radauted_example.cpp  radauted_impl.hpp
src/fortran/: radau.f
src/matlab/: radau.m
src/python/: VecOpDual.py  dopri5.py  dopri853_example.py  dopri853te.py  dopri853ted.py  dopri8_dual.py  dormand_prince_test.py  seulex.py  seulex_batch.py  seulex_batch_example.py  seulex_dual_example_dubins.py  seulex_dual_example_jax.py  seulex_dual_example_vdp.py  seulex_example.py  seulext.py  seulexted.py  seulexted_bak.py  seulextedjax.py  seulextedv1.py
src/python/odesolvers/: pyproject.toml
src/python/odesolvers/src/odesolvers/: bdf2_step.py  common_integrator.py  estrad.py  event_zero.py  gmres_decomp_test.py  interp_radau.py  linsolve.py  prepare_step.py  radau.py  radau_driver.py  radau_tables.py  simplified_newton.py  solvrad.py  stepcontext.py  vdp_odeexample.py
tests/cpp/: CMakeLists.txt  ode_solver_test.cpp
